[gd_scene load_steps=10 format=2]

[ext_resource path="res://flay_bird_game/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://flay_bird_game/Assets/Images/ground.png" type="Texture" id=2]
[ext_resource path="res://flay_bird_game/Assets/Images/grass.png" type="Texture" id=3]
[ext_resource path="res://flay_bird_game/Assets/Fonts/ZpixEX2_EX-10pix.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://flay_bird_game/Assets/Images/ready.png" type="Texture" id=5]
[ext_resource path="res://flay_bird_game/Scenes/Brid.tscn" type="PackedScene" id=6]
[ext_resource path="res://flay_bird_game/Scripts/Pipes.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 217.211, 33.9351 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BgBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BgBackground"]
motion_mirroring = Vector2( 430, 0 )

[node name="Sprite" type="Sprite" parent="BgBackground/ParallaxLayer"]
position = Vector2( 183.293, 303.578 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="TopBackground" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="TopBackground"]
motion_mirroring = Vector2( 500, 0 )

[node name="Top" type="Sprite" parent="TopBackground/ParallaxLayer"]
position = Vector2( 215.712, -42.0632 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
flip_v = true

[node name="BottomBackground" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="BottomBackground"]
motion_mirroring = Vector2( 500, 0 )

[node name="Bottom" type="Sprite" parent="BottomBackground/ParallaxLayer"]
position = Vector2( 220.314, 669.918 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="HUB" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="HUB"]
margin_left = 37.0124
margin_top = 70.1287
margin_right = 77.0124
margin_bottom = 136.129
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0"

[node name="Ready" type="TextureRect" parent="HUB"]
margin_left = 40.6478
margin_top = 87.0397
margin_right = 224.648
margin_bottom = 137.04
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="ReadyTimer" type="Timer" parent="HUB"]
wait_time = 1.5
one_shot = true

[node name="Brid" parent="." instance=ExtResource( 6 )]
position = Vector2( 168.406, 288.696 )
mode = 2
contacts_reported = 5

[node name="Pipes" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="PipeTimer" type="Timer" parent="Pipes"]
wait_time = 3.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 158.949, 8.59184 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 168.973, 618.613 )
shape = SubResource( 2 )
[connection signal="timeout" from="HUB/ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
[connection signal="timeout" from="Pipes/PipeTimer" to="Pipes" method="_on_PipeTimer_timeout"]
